# CybinGym

./: .gitignore  README.md  cybingym.py  dataset.json  pyproject.toml  scorer.py
agent_env/: Dockerfile  Dockerfile.default  Dockerfile.target  Dockerfile.test_pc_reg  Dockerfile.test_pc_reg_gt  compose.yaml
data/10013/: desc.txt  poc  target.txt
data/10055/: desc.txt  poc
data/10096/: desc.txt  poc
data/10147/: desc.txt  poc  target.txt
data/10252/: desc.txt  poc  target.txt
data/10306/: desc.txt  poc
data/10341/: desc.txt
data/10400/: desc.txt  poc  target.txt
data/10574/: desc.txt  poc
data/10628/: desc.txt  target.txt
data/10653/: desc.txt  poc
data/10710/: desc.txt  poc  target.txt
data/10731/: desc.txt  poc
data/10841/: desc.txt  poc
data/10863/: desc.txt  poc
data/10864/: desc.txt  poc  target.txt
data/10865/: desc.txt  poc  target.txt
data/10882/: desc.txt  poc  target.txt
data/10999/: desc.txt  poc
data/11007/: desc.txt
data/11033/: desc.txt
data/11078/: desc.txt  poc  target.txt
data/11081/: desc.txt  target.txt
data/11167/: desc.txt
data/11173/: desc.txt  poc
data/11244/: desc.txt
data/11245/: desc.txt  target.txt
data/11248/: desc.txt
data/11253/: desc.txt  target.txt
data/11256/: desc.txt
data/11382/: desc.txt  target.txt
data/11429/: desc.txt
data/11435/: desc.txt  target.txt
data/11504/: desc.txt
data/11523/: desc.txt
data/11633/: desc.txt
data/11657/: desc.txt
help_scripts/: gen_dataset_json.py  validate_poc.py
solvers/: openai_agent.py  prompts.py  react.py  swe_agents.py
(+152 files in other folders)
