[project]
name = "cybingym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.111.0",
    "docker>=7.1.0",
    "inspect-ai>=0.3.240",
    "inspect-swe>=0.2.63",
    "openai>=2.42.0",
    "openai-agents>=0.17.5",
]
